# angular-streaking

./: .gitignore  README.md  functions.py  pyproject.toml  setup.py  sim.py  simulation.py
examples/: simple.py
simulations/: ballchamber.py  comparison.py  comparison_rk4_dumb.py  electron_generator.py  first.py  gouy.py  gui.py  ml_data_generator.py  no_ke.py  testing_Arne_streaker.py  testing_cross_section_pdf.py  testing_time_energy_maps.py  the_grid.py  trajectories.py
simulations/configs/: default.yaml  sqs_june2022.yaml
streaking/: conversions.py  detectors.py  electrons.py  gaussian_beam.py  ionization.py  multivariate_map_interpolator.py  stats.py  streak.py  time_energy_map.py
streaking/components/: electrons.py  gaussian_beam.py  ionization.py  stats.py  time_energy_map.py
