[tool.poetry]
name = "streaking"
version = "0.1.0"
description = ""
authors = ["Lars Funke <lars.funke@tu-dortmund.de>", "Arne Held <arne.held@tu-dortmund.de>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
"ruamel.yaml" = "^0.17.4"
h5py = "^3.2.1"
p-tqdm = "^1.3.3"
scipy = "^1.6.2"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
